# Labs

./: .gitignore
.github/workflows/: jekyll-gh-pages.yml  static.yml
Algorithms_and_complexity/AA_Tree/: aatree.go
Algorithms_and_complexity/Complex_Strassen_GaussJordan_and_LU/AC_Lab1/: AC_Lab1.vcxproj.filters  ComplexMatrix.h  GaussJordan.h  (+2 more)
Algorithms_and_complexity/Perfect_Hash_Function_in_Go/: hashStruct.go  utils.go
Algorithms_and_complexity/Substring_search_algorithms/: CMakeLists.txt  Naive.h  Rabin_Karp.h  auxiliary.h
Data_Analysis/Correlation_analysis/: .Rhistory
Data_Analysis/Data_PreProcessing/: .Rhistory
Data_and_knowledge_bases_organisation/Jazz Gigs DB/: livesql.oracle.com code backup.txt
Data_and_knowledge_bases_organisation/Master-Slave micro RDMS/: CMakeLists.txt  README.MD  main.cpp
KNU_YEAR_1/: SFML CMake.txt
KNU_YEAR_1/1 semester/Lab_3/: CMakeLists.txt  nmb 17 (Tailor Series).cpp
KNU_YEAR_1/2 semester/Deque through the length and breadth/: Application.h  ArrayDeque.h  CMakeLists.txt  Point.cpp  Point.h  Timer.h
KNU_YEAR_1/Additional/: Day-Night.py  Pass_the_Rook.cpp  sqrt_decompos.cpp  work_with_fstream.cpp
KNU_YEAR_2/Algorithms_and_complexity/Complex_Strassen_GaussJordan_and_LU/: AC_Lab1.sln  AC_Lab1.vcxproj  AC_Lab1.vcxproj.filters  CMakeLists.txt
KNU_YEAR_2/Algorithms_and_complexity/Complex_Strassen_GaussJordan_and_LU/AC_Lab1/: AC_Lab1.vcxproj  ComplexMatrix.h  ComplexNum.h  GaussJordan.h  Strassen.h  test.cpp
KNU_YEAR_2/Fundamentals_of_OOP/DS_And_Algorithms_with_OOP/: CMakeLists.txt  main.cpp
KNU_YEAR_2/Fundamentals_of_OOP/DS_And_Algorithms_with_OOP/components/: SkipList.h  SkipList.hpp  Tests.cpp  Time.cpp  Time.h  UI.cpp  UI.h
KNU_YEAR_2/WEB/: Lecture task 11.html  Lecture task 14.html  Lecture task 15.html  Lecture task 4.html  Lecture task 7.html  Module1_task1.html  Sem.1 Task 1.html  Sem.1 Task 2.html  Sem.1 Task 3.html  Sem.2 Task.html  Sem.5 Task 1a.html  Sem.5 Task 2a.html  Sem.6 Task.html  Sem.7 Task.html  Sem.8 Task.html  Sem.9-10 Task.html
Programming/1D Shooter/: CMakeLists.txt  Game.cpp  NodeListDeque.h  main.cpp
Programming/1D Shooter/backup/: CMakeLists.txt  Game.cpp
Programming/Additional/: BuildSequences.cpp  NodeList Example.cpp  ReadTextFileInC.cpp  Sieve of Eratosthenes.cpp
Programming/Deque through the length and breadth/: Application.cpp  ArrayDeque.cpp  NodeListDeque.cpp  NodeListDeque.h  Timer.cpp  VectorDeque.cpp  VectorDeque.h  main.cpp
Programming/Educational Data Base/: CMakeLists.txt  Message.cpp  NodeList.cpp  Time.cpp  Time.h  Timer.cpp
Programming/Lab_3/: Point.h  Timer.h
Programming/Lab_4/: 1_arr.cpp
Programming/Lab_6/: main.cpp
Programming/Skip List/: Application.cpp  Application.h  CMakeLists.txt  SkipList.cpp  main.cpp
WEB/: Lecture task 1.html  Lecture task 10.html  Lecture task 12.html  Lecture task 13.html  Lecture task 16.html  Lecture task 17.html  Lecture task 2.html  Lecture task 20.html  Lecture task 3.html  Lecture task 5.html  Lecture task 6.html  Lecture task 8.html  Lecture task 9.html  Module Test 1.html  Module1_task2.html  Module1_task3.html  Sem.3 Task.html  Sem.4 Task.html  Sem.5 Task 1b.html  Sem.5 Task 2b.html
WEB/LayoutLab/: index.html
(+567 files in other folders)
