cmake_minimum_required(VERSION 3.20)
project(Deque_through_the_length_and_breadth)

set(CMAKE_CXX_STANDARD 20)

add_executable(Deque_through_the_length_and_breadth main.cpp Point.cpp Point.h VectorDeque.cpp VectorDeque.h Application.cpp Application.h ArrayDeque.cpp ArrayDeque.h NodeListDeque.cpp NodeListDeque.h Timer.cpp Timer.h)
